--- a/result/2022-07-12.md
+++ b/result/2022-07-12.md
@@ -4,7 +4,7 @@
 4. [女子火车上遭猥亵装睡冷静取证](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%81%AB%E8%BD%A6%E4%B8%8A%E9%81%AD%E7%8C%A5%E4%BA%B5%E8%A3%85%E7%9D%A1%E5%86%B7%E9%9D%99%E5%8F%96%E8%AF%81%23&Refer=top) 1040374
 5. [母女上楼被雨衣男子拖走](https://s.weibo.com//weibo?q=%E6%AF%8D%E5%A5%B3%E4%B8%8A%E6%A5%BC%E8%A2%AB%E9%9B%A8%E8%A1%A3%E7%94%B7%E5%AD%90%E6%8B%96%E8%B5%B0&Refer=top) 1039990
 6. [这一刻明白了读书的意义](https://s.weibo.com//weibo?q=%23%E8%BF%99%E4%B8%80%E5%88%BB%E6%98%8E%E7%99%BD%E4%BA%86%E8%AF%BB%E4%B9%A6%E7%9A%84%E6%84%8F%E4%B9%89%23&Refer=top) 1004875
-7. [成都电视台](https://s.weibo.com//weibo?q=%E6%88%90%E9%83%BD%E7%94%B5%E8%A7%86%E5%8F%B0&Refer=top) 893825
+7. [成都电视台](https://s.weibo.com//weibo?q=%E6%88%90%E9%83%BD%E7%94%B5%E8%A7%86%E5%8F%B0&Refer=top) 974091
 8. [张京华](https://s.weibo.com//weibo?q=%E5%BC%A0%E4%BA%AC%E5%8D%8E&Refer=top) 868093
 9. [成都电视台就谭谈交通发布声明](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E7%94%B5%E8%A7%86%E5%8F%B0%E5%B0%B1%E8%B0%AD%E8%B0%88%E4%BA%A4%E9%80%9A%E5%8F%91%E5%B8%83%E5%A3%B0%E6%98%8E%23&Refer=top) 801868
 10. [韩国统一教承认与安倍遇刺有关](https://s.weibo.com//weibo?q=%23%E9%9F%A9%E5%9B%BD%E7%BB%9F%E4%B8%80%E6%95%99%E6%89%BF%E8%AE%A4%E4%B8%8E%E5%AE%89%E5%80%8D%E9%81%87%E5%88%BA%E6%9C%89%E5%85%B3%23&Refer=top) 699890
@@ -13,11 +13,11 @@
 13. [害怕告诉父母考研的原因](https://s.weibo.com//weibo?q=%23%E5%AE%B3%E6%80%95%E5%91%8A%E8%AF%89%E7%88%B6%E6%AF%8D%E8%80%83%E7%A0%94%E7%9A%84%E5%8E%9F%E5%9B%A0%23&Refer=top) 627802
 14. [罗永浩称拿火烤钟薛高精神有问题](https://s.weibo.com//weibo?q=%23%E7%BD%97%E6%B0%B8%E6%B5%A9%E7%A7%B0%E6%8B%BF%E7%81%AB%E7%83%A4%E9%92%9F%E8%96%9B%E9%AB%98%E7%B2%BE%E7%A5%9E%E6%9C%89%E9%97%AE%E9%A2%98%23&Refer=top) 589495
 15. [男孩沉迷游戏被训持刀威胁父母](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%A9%E6%B2%89%E8%BF%B7%E6%B8%B8%E6%88%8F%E8%A2%AB%E8%AE%AD%E6%8C%81%E5%88%80%E5%A8%81%E8%83%81%E7%88%B6%E6%AF%8D%23&Refer=top) 533581
-16. [深圳疫情防控](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%96%AB%E6%83%85%E9%98%B2%E6%8E%A7%23&Refer=top) 502782
-17. [重庆两女生下河戏水意外身亡](https://s.weibo.com//weibo?q=%23%E9%87%8D%E5%BA%86%E4%B8%A4%E5%A5%B3%E7%94%9F%E4%B8%8B%E6%B2%B3%E6%88%8F%E6%B0%B4%E6%84%8F%E5%A4%96%E8%BA%AB%E4%BA%A1%23&Refer=top) 442878
-18. [谭乔再次回应谭谈交通下架](https://s.weibo.com//weibo?q=%23%E8%B0%AD%E4%B9%94%E5%86%8D%E6%AC%A1%E5%9B%9E%E5%BA%94%E8%B0%AD%E8%B0%88%E4%BA%A4%E9%80%9A%E4%B8%8B%E6%9E%B6%23&Refer=top) 418028
-19. [爸爸带女儿减肥被她一句话暖到](https://s.weibo.com//weibo?q=%23%E7%88%B8%E7%88%B8%E5%B8%A6%E5%A5%B3%E5%84%BF%E5%87%8F%E8%82%A5%E8%A2%AB%E5%A5%B9%E4%B8%80%E5%8F%A5%E8%AF%9D%E6%9A%96%E5%88%B0%23&Refer=top) 400752
-20. [独居老人3天没拿酸奶大姐焦急报警](https://s.weibo.com//weibo?q=%23%E7%8B%AC%E5%B1%85%E8%80%81%E4%BA%BA3%E5%A4%A9%E6%B2%A1%E6%8B%BF%E9%85%B8%E5%A5%B6%E5%A4%A7%E5%A7%90%E7%84%A6%E6%80%A5%E6%8A%A5%E8%AD%A6%23&Refer=top) 397958
+16. [独居老人3天没拿酸奶大姐焦急报警](https://s.weibo.com//weibo?q=%23%E7%8B%AC%E5%B1%85%E8%80%81%E4%BA%BA3%E5%A4%A9%E6%B2%A1%E6%8B%BF%E9%85%B8%E5%A5%B6%E5%A4%A7%E5%A7%90%E7%84%A6%E6%80%A5%E6%8A%A5%E8%AD%A6%23&Refer=top) 532075
+17. [深圳疫情防控](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%96%AB%E6%83%85%E9%98%B2%E6%8E%A7%23&Refer=top) 502782
+18. [重庆两女生下河戏水意外身亡](https://s.weibo.com//weibo?q=%23%E9%87%8D%E5%BA%86%E4%B8%A4%E5%A5%B3%E7%94%9F%E4%B8%8B%E6%B2%B3%E6%88%8F%E6%B0%B4%E6%84%8F%E5%A4%96%E8%BA%AB%E4%BA%A1%23&Refer=top) 442878
+19. [谭乔再次回应谭谈交通下架](https://s.weibo.com//weibo?q=%23%E8%B0%AD%E4%B9%94%E5%86%8D%E6%AC%A1%E5%9B%9E%E5%BA%94%E8%B0%AD%E8%B0%88%E4%BA%A4%E9%80%9A%E4%B8%8B%E6%9E%B6%23&Refer=top) 418028
+20. [爸爸带女儿减肥被她一句话暖到](https://s.weibo.com//weibo?q=%23%E7%88%B8%E7%88%B8%E5%B8%A6%E5%A5%B3%E5%84%BF%E5%87%8F%E8%82%A5%E8%A2%AB%E5%A5%B9%E4%B8%80%E5%8F%A5%E8%AF%9D%E6%9A%96%E5%88%B0%23&Refer=top) 400752
 21. [兰州新增12处高风险区4处中风险区](https://s.weibo.com//weibo?q=%23%E5%85%B0%E5%B7%9E%E6%96%B0%E5%A2%9E12%E5%A4%84%E9%AB%98%E9%A3%8E%E9%99%A9%E5%8C%BA4%E5%A4%84%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%8C%BA%23&Refer=top) 360560
 22. [北京明起有序恢复举办线下体育赛事活动](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E6%98%8E%E8%B5%B7%E6%9C%89%E5%BA%8F%E6%81%A2%E5%A4%8D%E4%B8%BE%E5%8A%9E%E7%BA%BF%E4%B8%8B%E4%BD%93%E8%82%B2%E8%B5%9B%E4%BA%8B%E6%B4%BB%E5%8A%A8%23&Refer=top) 339513
 23. [清华大学CUBA北区冠军](https://s.weibo.com//weibo?q=%23%E6%B8%85%E5%8D%8E%E5%A4%A7%E5%AD%A6CUBA%E5%8C%97%E5%8C%BA%E5%86%A0%E5%86%9B%23&Refer=top) 331435
@@ -38,13 +38,14 @@
 38. [教科书级别的直腿训练](https://s.weibo.com//weibo?q=%23%E6%95%99%E7%A7%91%E4%B9%A6%E7%BA%A7%E5%88%AB%E7%9A%84%E7%9B%B4%E8%85%BF%E8%AE%AD%E7%BB%83%23&Refer=top) 176743
 39. [深夜想吃东西怎么办](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%A4%9C%E6%83%B3%E5%90%83%E4%B8%9C%E8%A5%BF%E6%80%8E%E4%B9%88%E5%8A%9E%23&Refer=top) 174657
 40. [感染霍乱有什么症状](https://s.weibo.com//weibo?q=%23%E6%84%9F%E6%9F%93%E9%9C%8D%E4%B9%B1%E6%9C%89%E4%BB%80%E4%B9%88%E7%97%87%E7%8A%B6%23&Refer=top) 170997
-41. [上海称用人单位不得歧视阳性康复者](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E7%A7%B0%E7%94%A8%E4%BA%BA%E5%8D%95%E4%BD%8D%E4%B8%8D%E5%BE%97%E6%AD%A7%E8%A7%86%E9%98%B3%E6%80%A7%E5%BA%B7%E5%A4%8D%E8%80%85%23&Refer=top) 164941
-42. [起身常眩晕的人老年痴呆风险更高](https://s.weibo.com//weibo?q=%23%E8%B5%B7%E8%BA%AB%E5%B8%B8%E7%9C%A9%E6%99%95%E7%9A%84%E4%BA%BA%E8%80%81%E5%B9%B4%E7%97%B4%E5%91%86%E9%A3%8E%E9%99%A9%E6%9B%B4%E9%AB%98%23&Refer=top) 155448
-43. [拉肚子可能和情绪有关](https://s.weibo.com//weibo?q=%23%E6%8B%89%E8%82%9A%E5%AD%90%E5%8F%AF%E8%83%BD%E5%92%8C%E6%83%85%E7%BB%AA%E6%9C%89%E5%85%B3%23&Refer=top) 150147
-44. [写着写着就变身了](https://s.weibo.com//weibo?q=%23%E5%86%99%E7%9D%80%E5%86%99%E7%9D%80%E5%B0%B1%E5%8F%98%E8%BA%AB%E4%BA%86%23&Refer=top) 147080
-45. [村行垫付小程序7月15日启用](https://s.weibo.com//weibo?q=%23%E6%9D%91%E8%A1%8C%E5%9E%AB%E4%BB%98%E5%B0%8F%E7%A8%8B%E5%BA%8F7%E6%9C%8815%E6%97%A5%E5%90%AF%E7%94%A8%23&Refer=top) 120795
-46. [谁不想成为清醒又坚定的人呢](https://s.weibo.com//weibo?q=%23%E8%B0%81%E4%B8%8D%E6%83%B3%E6%88%90%E4%B8%BA%E6%B8%85%E9%86%92%E5%8F%88%E5%9D%9A%E5%AE%9A%E7%9A%84%E4%BA%BA%E5%91%A2%23&Refer=top) 97142
-47. [麦当劳员工将掉地上面包放回货架](https://s.weibo.com//weibo?q=%23%E9%BA%A6%E5%BD%93%E5%8A%B3%E5%91%98%E5%B7%A5%E5%B0%86%E6%8E%89%E5%9C%B0%E4%B8%8A%E9%9D%A2%E5%8C%85%E6%94%BE%E5%9B%9E%E8%B4%A7%E6%9E%B6%23&Refer=top) 79605
+41. [麦当劳员工将掉地上面包放回货架](https://s.weibo.com//weibo?q=%23%E9%BA%A6%E5%BD%93%E5%8A%B3%E5%91%98%E5%B7%A5%E5%B0%86%E6%8E%89%E5%9C%B0%E4%B8%8A%E9%9D%A2%E5%8C%85%E6%94%BE%E5%9B%9E%E8%B4%A7%E6%9E%B6%23&Refer=top) 167528
+42. [上海称用人单位不得歧视阳性康复者](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E7%A7%B0%E7%94%A8%E4%BA%BA%E5%8D%95%E4%BD%8D%E4%B8%8D%E5%BE%97%E6%AD%A7%E8%A7%86%E9%98%B3%E6%80%A7%E5%BA%B7%E5%A4%8D%E8%80%85%23&Refer=top) 164941
+43. [起身常眩晕的人老年痴呆风险更高](https://s.weibo.com//weibo?q=%23%E8%B5%B7%E8%BA%AB%E5%B8%B8%E7%9C%A9%E6%99%95%E7%9A%84%E4%BA%BA%E8%80%81%E5%B9%B4%E7%97%B4%E5%91%86%E9%A3%8E%E9%99%A9%E6%9B%B4%E9%AB%98%23&Refer=top) 155448
+44. [拉肚子可能和情绪有关](https://s.weibo.com//weibo?q=%23%E6%8B%89%E8%82%9A%E5%AD%90%E5%8F%AF%E8%83%BD%E5%92%8C%E6%83%85%E7%BB%AA%E6%9C%89%E5%85%B3%23&Refer=top) 150147
+45. [写着写着就变身了](https://s.weibo.com//weibo?q=%23%E5%86%99%E7%9D%80%E5%86%99%E7%9D%80%E5%B0%B1%E5%8F%98%E8%BA%AB%E4%BA%86%23&Refer=top) 147080
+46. [村行垫付小程序7月15日启用](https://s.weibo.com//weibo?q=%23%E6%9D%91%E8%A1%8C%E5%9E%AB%E4%BB%98%E5%B0%8F%E7%A8%8B%E5%BA%8F7%E6%9C%8815%E6%97%A5%E5%90%AF%E7%94%A8%23&Refer=top) 120795
+47. [谁不想成为清醒又坚定的人呢](https://s.weibo.com//weibo?q=%23%E8%B0%81%E4%B8%8D%E6%83%B3%E6%88%90%E4%B8%BA%E6%B8%85%E9%86%92%E5%8F%88%E5%9D%9A%E5%AE%9A%E7%9A%84%E4%BA%BA%E5%91%A2%23&Refer=top) 97142
 48. [如何预防感染霍乱](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E9%A2%84%E9%98%B2%E6%84%9F%E6%9F%93%E9%9C%8D%E4%B9%B1%23&Refer=top) 67300
-49. [洛阳白云山对山东人民免门票](https://s.weibo.com//weibo?q=%23%E6%B4%9B%E9%98%B3%E7%99%BD%E4%BA%91%E5%B1%B1%E5%AF%B9%E5%B1%B1%E4%B8%9C%E4%BA%BA%E6%B0%91%E5%85%8D%E9%97%A8%E7%A5%A8%23&Refer=top) 45667
-50. [浙江气温红色预警](https://s.weibo.com//weibo?q=%23%E6%B5%99%E6%B1%9F%E6%B0%94%E6%B8%A9%E7%BA%A2%E8%89%B2%E9%A2%84%E8%AD%A6%23&Refer=top) 23912
+49. [洛阳白云山对山东人民免门票](https://s.weibo.com//weibo?q=%23%E6%B4%9B%E9%98%B3%E7%99%BD%E4%BA%91%E5%B1%B1%E5%AF%B9%E5%B1%B1%E4%B8%9C%E4%BA%BA%E6%B0%91%E5%85%8D%E9%97%A8%E7%A5%A8%23&Refer=top) 59719
+50. [演员的原声台词实力](https://s.weibo.com//weibo?q=%23%E6%BC%94%E5%91%98%E7%9A%84%E5%8E%9F%E5%A3%B0%E5%8F%B0%E8%AF%8D%E5%AE%9E%E5%8A%9B%23&Refer=top) 50569
+51. [浙江气温红色预警](https://s.weibo.com//weibo?q=%23%E6%B5%99%E6%B1%9F%E6%B0%94%E6%B8%A9%E7%BA%A2%E8%89%B2%E9%A2%84%E8%AD%A6%23&Refer=top) 23912
