--- a/result/2022-07-12.md
+++ b/result/2022-07-12.md
@@ -1,14 +1,14 @@
 1. [双非本科生漫长的毕业季](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E9%9D%9E%E6%9C%AC%E7%A7%91%E7%94%9F%E6%BC%AB%E9%95%BF%E7%9A%84%E6%AF%95%E4%B8%9A%E5%AD%A3%23&Refer=top) 2258528
-2. [成都电视台](https://s.weibo.com//weibo?q=%E6%88%90%E9%83%BD%E7%94%B5%E8%A7%86%E5%8F%B0&Refer=top) 1863247
+2. [成都电视台](https://s.weibo.com//weibo?q=%E6%88%90%E9%83%BD%E7%94%B5%E8%A7%86%E5%8F%B0&Refer=top) 1902687
 3. [河南对村镇银行客户开展先行垫付](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E5%AF%B9%E6%9D%91%E9%95%87%E9%93%B6%E8%A1%8C%E5%AE%A2%E6%88%B7%E5%BC%80%E5%B1%95%E5%85%88%E8%A1%8C%E5%9E%AB%E4%BB%98%23&Refer=top) 1102989
-4. [熬夜后补觉真的有用吗](https://s.weibo.com//weibo?q=%23%E7%86%AC%E5%A4%9C%E5%90%8E%E8%A1%A5%E8%A7%89%E7%9C%9F%E7%9A%84%E6%9C%89%E7%94%A8%E5%90%97%23&Refer=top) 1041005
-5. [女子火车上遭猥亵装睡冷静取证](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%81%AB%E8%BD%A6%E4%B8%8A%E9%81%AD%E7%8C%A5%E4%BA%B5%E8%A3%85%E7%9D%A1%E5%86%B7%E9%9D%99%E5%8F%96%E8%AF%81%23&Refer=top) 1040374
-6. [母女上楼被雨衣男子拖走](https://s.weibo.com//weibo?q=%E6%AF%8D%E5%A5%B3%E4%B8%8A%E6%A5%BC%E8%A2%AB%E9%9B%A8%E8%A1%A3%E7%94%B7%E5%AD%90%E6%8B%96%E8%B5%B0&Refer=top) 1039990
-7. [这一刻明白了读书的意义](https://s.weibo.com//weibo?q=%23%E8%BF%99%E4%B8%80%E5%88%BB%E6%98%8E%E7%99%BD%E4%BA%86%E8%AF%BB%E4%B9%A6%E7%9A%84%E6%84%8F%E4%B9%89%23&Refer=top) 1004875
-8. [独居老人3天没拿酸奶大姐焦急报警](https://s.weibo.com//weibo?q=%23%E7%8B%AC%E5%B1%85%E8%80%81%E4%BA%BA3%E5%A4%A9%E6%B2%A1%E6%8B%BF%E9%85%B8%E5%A5%B6%E5%A4%A7%E5%A7%90%E7%84%A6%E6%80%A5%E6%8A%A5%E8%AD%A6%23&Refer=top) 911928
-9. [张京华](https://s.weibo.com//weibo?q=%E5%BC%A0%E4%BA%AC%E5%8D%8E&Refer=top) 868093
-10. [成都电视台就谭谈交通发布声明](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E7%94%B5%E8%A7%86%E5%8F%B0%E5%B0%B1%E8%B0%AD%E8%B0%88%E4%BA%A4%E9%80%9A%E5%8F%91%E5%B8%83%E5%A3%B0%E6%98%8E%23&Refer=top) 801868
-11. [麦当劳员工将掉地上面包放回货架](https://s.weibo.com//weibo?q=%23%E9%BA%A6%E5%BD%93%E5%8A%B3%E5%91%98%E5%B7%A5%E5%B0%86%E6%8E%89%E5%9C%B0%E4%B8%8A%E9%9D%A2%E5%8C%85%E6%94%BE%E5%9B%9E%E8%B4%A7%E6%9E%B6%23&Refer=top) 792594
+4. [麦当劳员工将掉地上面包放回货架](https://s.weibo.com//weibo?q=%23%E9%BA%A6%E5%BD%93%E5%8A%B3%E5%91%98%E5%B7%A5%E5%B0%86%E6%8E%89%E5%9C%B0%E4%B8%8A%E9%9D%A2%E5%8C%85%E6%94%BE%E5%9B%9E%E8%B4%A7%E6%9E%B6%23&Refer=top) 1096470
+5. [熬夜后补觉真的有用吗](https://s.weibo.com//weibo?q=%23%E7%86%AC%E5%A4%9C%E5%90%8E%E8%A1%A5%E8%A7%89%E7%9C%9F%E7%9A%84%E6%9C%89%E7%94%A8%E5%90%97%23&Refer=top) 1041005
+6. [女子火车上遭猥亵装睡冷静取证](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%81%AB%E8%BD%A6%E4%B8%8A%E9%81%AD%E7%8C%A5%E4%BA%B5%E8%A3%85%E7%9D%A1%E5%86%B7%E9%9D%99%E5%8F%96%E8%AF%81%23&Refer=top) 1040374
+7. [母女上楼被雨衣男子拖走](https://s.weibo.com//weibo?q=%E6%AF%8D%E5%A5%B3%E4%B8%8A%E6%A5%BC%E8%A2%AB%E9%9B%A8%E8%A1%A3%E7%94%B7%E5%AD%90%E6%8B%96%E8%B5%B0&Refer=top) 1039990
+8. [这一刻明白了读书的意义](https://s.weibo.com//weibo?q=%23%E8%BF%99%E4%B8%80%E5%88%BB%E6%98%8E%E7%99%BD%E4%BA%86%E8%AF%BB%E4%B9%A6%E7%9A%84%E6%84%8F%E4%B9%89%23&Refer=top) 1004875
+9. [独居老人3天没拿酸奶大姐焦急报警](https://s.weibo.com//weibo?q=%23%E7%8B%AC%E5%B1%85%E8%80%81%E4%BA%BA3%E5%A4%A9%E6%B2%A1%E6%8B%BF%E9%85%B8%E5%A5%B6%E5%A4%A7%E5%A7%90%E7%84%A6%E6%80%A5%E6%8A%A5%E8%AD%A6%23&Refer=top) 982631
+10. [张京华](https://s.weibo.com//weibo?q=%E5%BC%A0%E4%BA%AC%E5%8D%8E&Refer=top) 868093
+11. [成都电视台就谭谈交通发布声明](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E7%94%B5%E8%A7%86%E5%8F%B0%E5%B0%B1%E8%B0%AD%E8%B0%88%E4%BA%A4%E9%80%9A%E5%8F%91%E5%B8%83%E5%A3%B0%E6%98%8E%23&Refer=top) 801868
 12. [韩国统一教承认与安倍遇刺有关](https://s.weibo.com//weibo?q=%23%E9%9F%A9%E5%9B%BD%E7%BB%9F%E4%B8%80%E6%95%99%E6%89%BF%E8%AE%A4%E4%B8%8E%E5%AE%89%E5%80%8D%E9%81%87%E5%88%BA%E6%9C%89%E5%85%B3%23&Refer=top) 699890
 13. [陈婷否认张艺谋急售无锡别墅](https://s.weibo.com//weibo?q=%23%E9%99%88%E5%A9%B7%E5%90%A6%E8%AE%A4%E5%BC%A0%E8%89%BA%E8%B0%8B%E6%80%A5%E5%94%AE%E6%97%A0%E9%94%A1%E5%88%AB%E5%A2%85%23&Refer=top) 645350
 14. [江浙沪川渝局地将超40度](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E6%B5%99%E6%B2%AA%E5%B7%9D%E6%B8%9D%E5%B1%80%E5%9C%B0%E5%B0%86%E8%B6%8540%E5%BA%A6%23&Refer=top) 631321
@@ -29,24 +29,25 @@
 29. [才知道小狗这么有心机](https://s.weibo.com//weibo?q=%23%E6%89%8D%E7%9F%A5%E9%81%93%E5%B0%8F%E7%8B%97%E8%BF%99%E4%B9%88%E6%9C%89%E5%BF%83%E6%9C%BA%23&Refer=top) 290887
 30. [面试一定要保护好个人隐私](https://s.weibo.com//weibo?q=%23%E9%9D%A2%E8%AF%95%E4%B8%80%E5%AE%9A%E8%A6%81%E4%BF%9D%E6%8A%A4%E5%A5%BD%E4%B8%AA%E4%BA%BA%E9%9A%90%E7%A7%81%23&Refer=top) 272862
 31. [美军航母上一架战机被吹入海里](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%86%9B%E8%88%AA%E6%AF%8D%E4%B8%8A%E4%B8%80%E6%9E%B6%E6%88%98%E6%9C%BA%E8%A2%AB%E5%90%B9%E5%85%A5%E6%B5%B7%E9%87%8C%23&Refer=top) 267042
-32. [真正溺水不会像电视剧那样大声呼救](https://s.weibo.com//weibo?q=%23%E7%9C%9F%E6%AD%A3%E6%BA%BA%E6%B0%B4%E4%B8%8D%E4%BC%9A%E5%83%8F%E7%94%B5%E8%A7%86%E5%89%A7%E9%82%A3%E6%A0%B7%E5%A4%A7%E5%A3%B0%E5%91%BC%E6%95%91%23&Refer=top) 257786
-33. [寺庙里为什么有车神](https://s.weibo.com//weibo?q=%23%E5%AF%BA%E5%BA%99%E9%87%8C%E4%B8%BA%E4%BB%80%E4%B9%88%E6%9C%89%E8%BD%A6%E7%A5%9E%23&Refer=top) 234064
-34. [拉肚子可能和情绪有关](https://s.weibo.com//weibo?q=%23%E6%8B%89%E8%82%9A%E5%AD%90%E5%8F%AF%E8%83%BD%E5%92%8C%E6%83%85%E7%BB%AA%E6%9C%89%E5%85%B3%23&Refer=top) 231343
+32. [拉肚子可能和情绪有关](https://s.weibo.com//weibo?q=%23%E6%8B%89%E8%82%9A%E5%AD%90%E5%8F%AF%E8%83%BD%E5%92%8C%E6%83%85%E7%BB%AA%E6%9C%89%E5%85%B3%23&Refer=top) 264908
+33. [真正溺水不会像电视剧那样大声呼救](https://s.weibo.com//weibo?q=%23%E7%9C%9F%E6%AD%A3%E6%BA%BA%E6%B0%B4%E4%B8%8D%E4%BC%9A%E5%83%8F%E7%94%B5%E8%A7%86%E5%89%A7%E9%82%A3%E6%A0%B7%E5%A4%A7%E5%A3%B0%E5%91%BC%E6%95%91%23&Refer=top) 257786
+34. [寺庙里为什么有车神](https://s.weibo.com//weibo?q=%23%E5%AF%BA%E5%BA%99%E9%87%8C%E4%B8%BA%E4%BB%80%E4%B9%88%E6%9C%89%E8%BD%A6%E7%A5%9E%23&Refer=top) 234064
 35. [成都电视台称未对谭乔索赔千万](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E7%94%B5%E8%A7%86%E5%8F%B0%E7%A7%B0%E6%9C%AA%E5%AF%B9%E8%B0%AD%E4%B9%94%E7%B4%A2%E8%B5%94%E5%8D%83%E4%B8%87%23&Refer=top) 222200
 36. [郑州新增3例确诊病例](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E6%96%B0%E5%A2%9E3%E4%BE%8B%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 210358
 37. [蚂蚁财富称支付宝盛京银行取现正常](https://s.weibo.com//weibo?q=%23%E8%9A%82%E8%9A%81%E8%B4%A2%E5%AF%8C%E7%A7%B0%E6%94%AF%E4%BB%98%E5%AE%9D%E7%9B%9B%E4%BA%AC%E9%93%B6%E8%A1%8C%E5%8F%96%E7%8E%B0%E6%AD%A3%E5%B8%B8%23&Refer=top) 207583
-38. [希望日方认真汲取历史教训](https://s.weibo.com//weibo?q=%23%E5%B8%8C%E6%9C%9B%E6%97%A5%E6%96%B9%E8%AE%A4%E7%9C%9F%E6%B1%B2%E5%8F%96%E5%8E%86%E5%8F%B2%E6%95%99%E8%AE%AD%23&Refer=top) 190724
-39. [深圳天空出现丁达尔现象](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%A4%A9%E7%A9%BA%E5%87%BA%E7%8E%B0%E4%B8%81%E8%BE%BE%E5%B0%94%E7%8E%B0%E8%B1%A1%23&Refer=top) 186391
-40. [教科书级别的直腿训练](https://s.weibo.com//weibo?q=%23%E6%95%99%E7%A7%91%E4%B9%A6%E7%BA%A7%E5%88%AB%E7%9A%84%E7%9B%B4%E8%85%BF%E8%AE%AD%E7%BB%83%23&Refer=top) 176743
-41. [深夜想吃东西怎么办](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%A4%9C%E6%83%B3%E5%90%83%E4%B8%9C%E8%A5%BF%E6%80%8E%E4%B9%88%E5%8A%9E%23&Refer=top) 174657
-42. [感染霍乱有什么症状](https://s.weibo.com//weibo?q=%23%E6%84%9F%E6%9F%93%E9%9C%8D%E4%B9%B1%E6%9C%89%E4%BB%80%E4%B9%88%E7%97%87%E7%8A%B6%23&Refer=top) 170997
-43. [上海称用人单位不得歧视阳性康复者](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E7%A7%B0%E7%94%A8%E4%BA%BA%E5%8D%95%E4%BD%8D%E4%B8%8D%E5%BE%97%E6%AD%A7%E8%A7%86%E9%98%B3%E6%80%A7%E5%BA%B7%E5%A4%8D%E8%80%85%23&Refer=top) 164941
-44. [演员的原声台词实力](https://s.weibo.com//weibo?q=%23%E6%BC%94%E5%91%98%E7%9A%84%E5%8E%9F%E5%A3%B0%E5%8F%B0%E8%AF%8D%E5%AE%9E%E5%8A%9B%23&Refer=top) 156908
-45. [起身常眩晕的人老年痴呆风险更高](https://s.weibo.com//weibo?q=%23%E8%B5%B7%E8%BA%AB%E5%B8%B8%E7%9C%A9%E6%99%95%E7%9A%84%E4%BA%BA%E8%80%81%E5%B9%B4%E7%97%B4%E5%91%86%E9%A3%8E%E9%99%A9%E6%9B%B4%E9%AB%98%23&Refer=top) 155448
-46. [写着写着就变身了](https://s.weibo.com//weibo?q=%23%E5%86%99%E7%9D%80%E5%86%99%E7%9D%80%E5%B0%B1%E5%8F%98%E8%BA%AB%E4%BA%86%23&Refer=top) 147080
-47. [洛阳白云山对山东人民免门票](https://s.weibo.com//weibo?q=%23%E6%B4%9B%E9%98%B3%E7%99%BD%E4%BA%91%E5%B1%B1%E5%AF%B9%E5%B1%B1%E4%B8%9C%E4%BA%BA%E6%B0%91%E5%85%8D%E9%97%A8%E7%A5%A8%23&Refer=top) 124628
-48. [村行垫付小程序7月15日启用](https://s.weibo.com//weibo?q=%23%E6%9D%91%E8%A1%8C%E5%9E%AB%E4%BB%98%E5%B0%8F%E7%A8%8B%E5%BA%8F7%E6%9C%8815%E6%97%A5%E5%90%AF%E7%94%A8%23&Refer=top) 120795
-49. [谁不想成为清醒又坚定的人呢](https://s.weibo.com//weibo?q=%23%E8%B0%81%E4%B8%8D%E6%83%B3%E6%88%90%E4%B8%BA%E6%B8%85%E9%86%92%E5%8F%88%E5%9D%9A%E5%AE%9A%E7%9A%84%E4%BA%BA%E5%91%A2%23&Refer=top) 97142
-50. [如何预防感染霍乱](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E9%A2%84%E9%98%B2%E6%84%9F%E6%9F%93%E9%9C%8D%E4%B9%B1%23&Refer=top) 67300
-51. [小牦牛和无人区巡护员一起晨跑](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E7%89%A6%E7%89%9B%E5%92%8C%E6%97%A0%E4%BA%BA%E5%8C%BA%E5%B7%A1%E6%8A%A4%E5%91%98%E4%B8%80%E8%B5%B7%E6%99%A8%E8%B7%91%23&Refer=top) 65565
-52. [浙江气温红色预警](https://s.weibo.com//weibo?q=%23%E6%B5%99%E6%B1%9F%E6%B0%94%E6%B8%A9%E7%BA%A2%E8%89%B2%E9%A2%84%E8%AD%A6%23&Refer=top) 23912
+38. [谭乔称将视频激励进行了妥善处理](https://s.weibo.com//weibo?q=%23%E8%B0%AD%E4%B9%94%E7%A7%B0%E5%B0%86%E8%A7%86%E9%A2%91%E6%BF%80%E5%8A%B1%E8%BF%9B%E8%A1%8C%E4%BA%86%E5%A6%A5%E5%96%84%E5%A4%84%E7%90%86%23&Refer=top) 204487
+39. [演员的原声台词实力](https://s.weibo.com//weibo?q=%23%E6%BC%94%E5%91%98%E7%9A%84%E5%8E%9F%E5%A3%B0%E5%8F%B0%E8%AF%8D%E5%AE%9E%E5%8A%9B%23&Refer=top) 194133
+40. [希望日方认真汲取历史教训](https://s.weibo.com//weibo?q=%23%E5%B8%8C%E6%9C%9B%E6%97%A5%E6%96%B9%E8%AE%A4%E7%9C%9F%E6%B1%B2%E5%8F%96%E5%8E%86%E5%8F%B2%E6%95%99%E8%AE%AD%23&Refer=top) 190724
+41. [深圳天空出现丁达尔现象](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%A4%A9%E7%A9%BA%E5%87%BA%E7%8E%B0%E4%B8%81%E8%BE%BE%E5%B0%94%E7%8E%B0%E8%B1%A1%23&Refer=top) 186391
+42. [教科书级别的直腿训练](https://s.weibo.com//weibo?q=%23%E6%95%99%E7%A7%91%E4%B9%A6%E7%BA%A7%E5%88%AB%E7%9A%84%E7%9B%B4%E8%85%BF%E8%AE%AD%E7%BB%83%23&Refer=top) 176743
+43. [深夜想吃东西怎么办](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%A4%9C%E6%83%B3%E5%90%83%E4%B8%9C%E8%A5%BF%E6%80%8E%E4%B9%88%E5%8A%9E%23&Refer=top) 174657
+44. [感染霍乱有什么症状](https://s.weibo.com//weibo?q=%23%E6%84%9F%E6%9F%93%E9%9C%8D%E4%B9%B1%E6%9C%89%E4%BB%80%E4%B9%88%E7%97%87%E7%8A%B6%23&Refer=top) 170997
+45. [上海称用人单位不得歧视阳性康复者](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E7%A7%B0%E7%94%A8%E4%BA%BA%E5%8D%95%E4%BD%8D%E4%B8%8D%E5%BE%97%E6%AD%A7%E8%A7%86%E9%98%B3%E6%80%A7%E5%BA%B7%E5%A4%8D%E8%80%85%23&Refer=top) 164941
+46. [起身常眩晕的人老年痴呆风险更高](https://s.weibo.com//weibo?q=%23%E8%B5%B7%E8%BA%AB%E5%B8%B8%E7%9C%A9%E6%99%95%E7%9A%84%E4%BA%BA%E8%80%81%E5%B9%B4%E7%97%B4%E5%91%86%E9%A3%8E%E9%99%A9%E6%9B%B4%E9%AB%98%23&Refer=top) 155448
+47. [写着写着就变身了](https://s.weibo.com//weibo?q=%23%E5%86%99%E7%9D%80%E5%86%99%E7%9D%80%E5%B0%B1%E5%8F%98%E8%BA%AB%E4%BA%86%23&Refer=top) 147080
+48. [洛阳白云山对山东人民免门票](https://s.weibo.com//weibo?q=%23%E6%B4%9B%E9%98%B3%E7%99%BD%E4%BA%91%E5%B1%B1%E5%AF%B9%E5%B1%B1%E4%B8%9C%E4%BA%BA%E6%B0%91%E5%85%8D%E9%97%A8%E7%A5%A8%23&Refer=top) 124628
+49. [村行垫付小程序7月15日启用](https://s.weibo.com//weibo?q=%23%E6%9D%91%E8%A1%8C%E5%9E%AB%E4%BB%98%E5%B0%8F%E7%A8%8B%E5%BA%8F7%E6%9C%8815%E6%97%A5%E5%90%AF%E7%94%A8%23&Refer=top) 120795
+50. [谁不想成为清醒又坚定的人呢](https://s.weibo.com//weibo?q=%23%E8%B0%81%E4%B8%8D%E6%83%B3%E6%88%90%E4%B8%BA%E6%B8%85%E9%86%92%E5%8F%88%E5%9D%9A%E5%AE%9A%E7%9A%84%E4%BA%BA%E5%91%A2%23&Refer=top) 97142
+51. [小牦牛和无人区巡护员一起晨跑](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E7%89%A6%E7%89%9B%E5%92%8C%E6%97%A0%E4%BA%BA%E5%8C%BA%E5%B7%A1%E6%8A%A4%E5%91%98%E4%B8%80%E8%B5%B7%E6%99%A8%E8%B7%91%23&Refer=top) 90578
+52. [如何预防感染霍乱](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E9%A2%84%E9%98%B2%E6%84%9F%E6%9F%93%E9%9C%8D%E4%B9%B1%23&Refer=top) 67300
+53. [浙江气温红色预警](https://s.weibo.com//weibo?q=%23%E6%B5%99%E6%B1%9F%E6%B0%94%E6%B8%A9%E7%BA%A2%E8%89%B2%E9%A2%84%E8%AD%A6%23&Refer=top) 23912
